test alignment fix

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -17,12 +17,12 @@ html
 
 body {
   background: url('/assets/images/chain.jpg') no-repeat center center fixed;
-  background-size: cover;
+  background-size: auto;
   background-attachment: fixed;
 }
 @media (max-width: 768px) {
   body {
-    background-attachment: scroll; 
+    background-attachment: fixed; 
   }
 }
 
